unpackaged/main/default/objects/pse__External_API_Credential__mdt/pse__External_API_Credential__mdt.object-meta.xml
<CustomObject>
    <label>External API Credential</label>
    <pluralLabel>External API Credentials</pluralLabel>
</CustomObject>