unpackaged/main/default/objects/pse__External_API_Credential__mdt/fields/pse__API_URL__c.field-meta.xml
<CustomField>
    <fullName>pse__API_URL__c</fullName>
    <description>URL for the external API call</description>
    <label>API URL</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>