unpackaged/main/default/objects/pse__External_API_Credential__mdt/fields/pse__Crypto_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__Crypto_Key__c</fullName>
    <description>Key for the external API call</description>
    <label>Crypto Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>