unpackaged/main/default/objects/pse__External_API_Credential__mdt/fields/pse__Encrypt__c.field-meta.xml
<CustomField>
    <fullName>pse__Encrypt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Encrypt the Crypto Key into a signature</description>
    <label>Encrypt</label>
    <type>Checkbox</type>
</CustomField>